Bug 498252 - Correct the font-size used in context menus, r=josh